--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,8 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="d8dbba">  <td>18/10/20 13:46:03</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.loginTest()[pri:2, instance:com.qa.xyz.tests.LoginTest@7cbd213e]">loginTest</td> 
+<tr bgcolor="d8dbba">  <td>18/10/21 18:52:46</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.loginTest()[pri:2, instance:com.qa.xyz.tests.LoginTest@7cbd213e]">loginTest</td> 
   <td>main@2050404090</td>   <td></td> </tr>
-<tr bgcolor="d8dbba">  <td>18/10/20 13:46:03</td>   <td>-90</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.setUp()[pri:0, instance:com.qa.xyz.tests.LoginTest@7cbd213e]">&gt;&gt;setUp</td> 
+<tr bgcolor="d8dbba">  <td>18/10/21 18:52:38</td>   <td>-8254</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.setUp()[pri:0, instance:com.qa.xyz.tests.LoginTest@7cbd213e]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@2050404090</td>   <td></td> </tr>
+<tr bgcolor="d8dbba">  <td>18/10/21 18:52:46</td>   <td>570</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTest.tearDown()[pri:0, instance:com.qa.xyz.tests.LoginTest@7cbd213e]">&lt;&lt;tearDown</td> 
 <td>&nbsp;</td>  <td>main@2050404090</td>   <td></td> </tr>
 </table>
